# Rag-Chat

./: LICENSE  README.md  app.py  pyproject.toml
components/: __init__.py  conversation_chain.py  document_operations.py  user_interface.py  vector_store_functions.py
config/: config.yaml
faiss_index/: index.faiss  index.pkl
utils/: load_config.py
