[tool.poetry]
name = "rag-chat"
version = "0.1.0"
description = "AI Conversation system with RAG to interact with structured and unstructured data."
authors = ["BennyDanielT <benny28dany@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
python-dotenv = "^1.0.1"
langchain = "^0.1.15"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
